Add initial commit
Signed-off-by: Daniel Reimer <daniel@muse.dev>

--- a/.muse.toml
+++ b/.muse.toml
@@ -1,2 +1,2 @@
-tools = []
-customTools =  [ "https://docs.muse.dev/scripts/shellcheck.sh", "https://docs.muse.dev/scripts/line-length.sh 100" ]
+build = "gradlew"
+tools = ["errorprone"]
