--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,10 @@
   <groupId>some.app</groupId>
   <artifactId>my-module</artifactId>
   <version>1</version>
+
+  <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
 </project>
