--- a/.muse.toml
+++ b/.muse.toml
@@ -1,3 +1,2 @@
-tools = []
-customTools = ["./shellcheck.sh"]
-ignoreRules = ["ShellCheck"]
+customTools = ["./shellcheck-local.sh"]
+disableTools = ["shellcheck-local"]
